objects/Floorplan__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Floorplans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Amount__c</fullName>
        <label>Credit Line Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Finance Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Started__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Year Started using this Floorplan</inlineHelpText>
        <label>Year Started</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Floor Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Floor Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Floor Plans</pluralLabel>
    <recordTypes>
        <fullName>ACV_Capital_Floorplan</fullName>
        <active>true</active>
        <label>ACV Capital Floorplan</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>